# ml-practice

./: README.md  pyproject.toml
src/practice/: __init__.py  exercise.py
src/practice/section3/: draw_functions.py  exercise.py  napier.py  sigmoid.py
src/practice/section4/: exercise.py  external_data.py  neural_newtwork.py  single_neuron.py
src/practice/section5/: train_output.py
